# pinentry-keepassxc

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  pkg.nix
docs/: TODO.md  keepassxc-protocol.md  keepassxc.md  pinentry.md
src/: assuan.rs  config.rs  keepassxc.rs  lib.rs  logging.rs  main.rs  state.rs
