[package]
name = "pinentry-keepassxc"
version = "0.1.0"
authors = ["Chen Zhenge <Mr.ChenWithCapsule@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = {version="^0.4", features=["tls"]}
log = "^0.4"
