[package]
name = "pinentry-keepassxc"
version = "0.2.1"
authors = ["Chen Zhenge <Mr.ChenWithCapsule@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1.4"
json = "^0.12.4"
crypto_box = "^0.5"
xsalsa20poly1305 = "^0.6"
rand = {version = "^0.7", features = ["getrandom"]}
base64 = "^0.13"
directories = "^3.0"
log = "^0.4"
